src/components/blog/Article.css
.article-container{
    width:100%;
    min-height: 100vh;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: linear-gradient(5deg, rgb(7, 7, 10) 0%, rgb(17, 17, 20) 100%);
}

.article-container article{
    color: #fff;
}

.article-container .cover-container{
    width: 70vw;
    margin: 5vh 15vw;
    overflow: hidden;
    position: relative;
    object-fit: scale-down;
}

.article-container .cover-container img{
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.article-container article .title{
    text-align: center;
    font-size: 2.5rem;
    margin: 20px 0 10px 0;
    text-transform: capitalize;
    color: #fff;
}

.article-container article .published-time{
    text-align: center;
    margin-bottom: 20px;
    font-size: 1.2rem;
    color: #384868;
}

.article-container article .published-time i{
    margin-right: 10px;
}

.article-container article .content{
    margin-bottom: 20px;
    width: 70%;
    margin-left: 15%;
}

.article-container article .content :is(img, video){
    width: 60%;
    height: auto;
    object-fit: fill;
    margin: 10px 20%;
    color: white;
}

.article-container article :is(h3, h4, h5, h6, p){
    line-height: 1.8rem;
    margin: 10px;
    color: white;
}

.article-container article blockquote{
    margin: 0 50px;
    line-height: 1.5rem;
    color: #ddd;
}

@media screen and (max-width: 768px) {
    .article-container article .content{
        margin-bottom: 20px;
        width: 84%;
        margin-left: 7%;
    }

    .article-container article .content :is(img, video){
        width: 70%;
        height: auto;
        object-fit: fill;
        margin: 10px 15%;
    }
}

